--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     implementation "com.twelvemonkeys.imageio:imageio-webp:3.10.1"
     // implementation "com.twelvemonkeys.imageio:imageio-xwd:3.10.1"
 	
+    implementation group: 'org.apache.pdfbox', name: 'jbig2-imageio', version: '3.0.4'
     implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
     implementation 'com.github.jai-imageio:jai-imageio-jpeg2000:1.4.0'
 	
